--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -9,6 +9,7 @@
 	.views-exposed-form {
 		.views-exposed-widget {
 			display: inline-block;
+			float: none;
 		}
 	}
 	
